fix the bug in shifting expanded view & collapased view

--- a/src/shopify/react-app/src/components/untracifiedOrders_mediaQueries.css
+++ b/src/shopify/react-app/src/components/untracifiedOrders_mediaQueries.css
@@ -4,6 +4,10 @@
         margin-left: auto;
         margin-right: auto;
    }
+
+   .pageWrapper{
+       height:900px;
+   }
 }
 
 
